erDiagram
  BRAND ||--o{ BID : places
  AUCTION ||--o{ BID : receives
  EVENT ||--o{ SLOT_INSTANCE : has
  ATHLETE ||--o{ SLOT_INSTANCE : offers
  SLOT_TEMPLATE ||--o{ SLOT_INSTANCE : instantiates
  SLOT_INSTANCE ||--|| AUCTION : auctions
  AUCTION ||--|| CONTRACT : results_in
  BRAND ||--o{ CONTRACT : signs
  ATHLETE ||--o{ CONTRACT : signs
  CONTRACT ||--o{ CREATIVE_ASSET : includes
  CONTRACT ||--|| VERIFICATION : verified_by
  CONTRACT ||--|| SETTLEMENT : settled_by

  BRAND {
    string brand_id PK
    string name
    string category
    string kyc_status
  }
  ATHLETE {
    string athlete_id PK
    string name
    string tour
    string kyc_status
  }
  EVENT {
    string event_id PK
    string tour
    date date_start
    date date_end
    float multiplier
  }
